gccida/c1/record_constant_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3359:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3373:14: error: expected expression
tree_int_cst::$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rbx 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3376:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3387:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3404:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &exp->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3413:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &exp->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3416:11: error: use of undeclared identifier 'p_int_cst'
pointer = p_int_cst; 
          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3505:20: error: expected expression
v31 = ( tree_node *)v30[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3505:9: error: use of undeclared identifier 'tree_node'
v31 = ( tree_node *)v30[4]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3582:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v20 = lang_hooks_0.expand_constant( exp); 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/varasm.c:3582:35: error: called object type '<dependent type>' is not a function or function pointer
v20 = lang_hooks_0.expand_constant( exp); 
                                  ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_constant_1/src/obj/varasm.o] Error 1
